# tracker-sparql-service

./: README.md  meson.build
src/: conf.c  conf.h  log.c  log.h  query.c  query.h  request.c  request.h  sparqld.c  sparqld.h
